# hltv-scraper

./: .gitignore  debug_warmup.html  docker-compose.yml  knownerrors.md  proxies.txt  proxies_local.txt  proxies_noauth.txt  proxy_tunnel.py  pyproject.toml  run.sh  start_proxies.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-http-client-and-anti-detection/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
migrations/: 001_initial_schema.sql  002_scrape_queue.sql  003_vetoes_rosters.sql  004_performance_economy.sql  005_quarantine.sql  006_drop_match_players.sql  007_cs2_only_rating.sql  008_perf_attempts.sql  009_eco_adjusted_stats.sql  010_match_start_time.sql
scripts/: analyze_economy_deep.py  analyze_economy_ot.py  analyze_economy_page.py  analyze_map_stats.py  analyze_match_overview.py  analyze_vetoes_detail.py  fetch_recon_samples.py  fetch_recon_supplement.py
src/scraper/: __init__.py  cli.py  config.py  db.py  discovery.py  discovery_repository.py  economy_parser.py  exceptions.py  http_client.py  logging_config.py  map_stats.py  map_stats_parser.py  match_overview.py  match_parser.py  performance_economy.py  performance_parser.py  pipeline.py  pipeline_v2.py  rate_limiter.py  repository.py  storage.py  user_agents.py  validation.py
tests/: test_cli.py  test_db.py  test_discovery_integration.py  test_discovery_repository.py  test_economy_parser.py  test_http_client.py  test_integration.py  test_map_stats.py  test_map_stats_parser.py  test_match_overview.py  test_match_parser.py  test_models.py  test_performance_economy.py  test_performance_parser.py  test_pipeline.py  test_rate_limiter.py  test_repository.py  test_results_parser.py  test_storage.py  test_storage_results.py  test_user_agents.py  test_validation.py
(+98 files in other folders)
