[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hltv-scraper"
version = "0.1.0"
description = "Web scraper for HLTV.org CS2 match data"
requires-python = ">=3.11"
dependencies = [
    "curl_cffi>=0.14.0",
    "tenacity>=9.0",
    "fake-useragent>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
