[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hltv-scraper"
version = "0.1.0"
description = "Web scraper for HLTV.org CS2 match data"
requires-python = ">=3.11"
dependencies = [
    "nodriver>=0.38",
    "tenacity>=9.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.10",
]

[project.scripts]
hltv-scraper = "scraper.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests that make real HTTP requests to HLTV (slow)"]
